[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "ropemother"
version = "0.1.0.dev2"
description = "A module for publish-subscribe broadcast messaging."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Joe Granville", email = "874605+jwgranville@users.noreply.github.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
test = [
    "pytest",
]
dev = [
    "black",
    "pylint",
    "pytest",
]

[tool.black]
line-length = 79
target-version = ["py313"]

[tool.pylint.main]
py-version = "3.13"